--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
     <section class="hero">
         <h2>Data is today's <span class="gold">Gold</span></h2>
+        <!-- <h2><span class="gold">Data</span><br> Is today's gold</h2> -->
+
         <p>Data Collection. Data Automation</p>
         <button class="cta-button">See Our Work</button>
     </section>
