--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DataWorks</title>
+    <title>DataPlay</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
         <headerTitle>
-            <h1>DataWorks</h1>
+            <h1>DataPlay</h1>
         </headerTitle>
         <nav>
             <ul>
@@ -45,7 +45,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 DataWorks</p>
+        <p>&copy; 2024 DataPlay</p>
     </footer>
 </body>
 <script src="script.js"></script>
