--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         <headerTitle>
-            <h1>DataPlay</h1>
+            <h1>DataPlay </h1>
+            <img src="logo.webp" alt="DataPlay Logo" class="logo">
+
         </headerTitle>
         <nav>
             <ul>
