--- a/index.html
+++ b/index.html
@@ -26,18 +26,17 @@
 
     <section class="hero">
         <h2>Data is today's <span class="gold">Gold</span></h2>
-        <!-- <h2><span class="gold">Data</span><br> Is today's gold</h2> -->
-
         <p>Data Collection. Data Automation</p>
         <button class="cta-button">See Our Work</button>
     </section>
 
+    <h3 class="as-seen-on">As Seen On</h3>
     <div class="banner-container">
         <div class="banner-slide">
-            <img src="path/to/logo1.png" alt="Logo 1">
-            <img src="path/to/logo2.png" alt="Logo 2">
-            <img src="path/to/logo3.png" alt="Logo 3">
-            <img src="path/to/logo4.png" alt="Logo 4">
+            <img src="images/referenceLogos/hn.webp" alt="Logo 1">
+            <img src="images/referenceLogos/ph.webp" alt="Logo 2">
+            <img src="images/referenceLogos/x.webp" alt="Logo 3">
+            <img src="images/referenceLogos/th.webp" alt="Logo 4">
             <!-- Repeat logos as needed for continuous scrolling -->
         </div>
     </div>
