--- a/index.html
+++ b/index.html
@@ -24,26 +24,28 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <h2>Data is today's <span class="gold">Gold</span></h2>
-        <p>Data Collection. Data Automation</p>
-        <button class="cta-button">See Our Work</button>
-    </section>
+    <main class="main-container">
+        <section class="hero">
+            <h2>Data is today's <span class="gold">Gold</span></h2>
+            <p>Data Collection. Data Automation</p>
+            <button class="cta-button">See Our Work</button>
+        </section>
 
-    <h3 class="as-seen-on">As Seen On</h3>
-    <div class="banner-container">
-        <div class="banner-slide">
-            <img src="images/referenceLogos/hn.webp" alt="Logo 1">
-            <img src="images/referenceLogos/ph.webp" alt="Logo 2">
-            <img src="images/referenceLogos/x.webp" alt="Logo 3">
-            <img src="images/referenceLogos/th.webp" alt="Logo 4">
-            <!-- Repeat logos as needed for continuous scrolling -->
+        <h3 class="as-seen-on">As Seen On</h3>
+        <div class="banner-container">
+            <div class="banner-slide">
+                <img src="images/referenceLogos/hn.webp" alt="Logo 1">
+                <img src="images/referenceLogos/ph.webp" alt="Logo 2">
+                <img src="images/referenceLogos/x.webp" alt="Logo 3">
+                <img src="images/referenceLogos/th.webp" alt="Logo 4">
+                <!-- Repeat logos as needed for continuous scrolling -->
+            </div>
         </div>
-    </div>
 
-    <section id="services" class="services">
-        <!-- Insert your services here with minimalist cards or descriptions -->
-    </section>
+        <section id="services" class="services">
+            <!-- Insert your services here with minimalist cards or descriptions -->
+        </section>
+    </main>
 
     <footer>
         <p>&copy; 2024 DataPlay</p>
