--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main class="main-container">
         <section class="hero">
-            <h2>Data is today's <span class="gold">Gold</span></h2>
+            <h2>Data is today's <br><span class="gold">Gold</span></h2>
             <p>Data Collection. Data Automation</p>
             <button class="cta-button">See Our Work</button>
         </section>
