--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <body>
     <header>
         <headerTitle>
-            <h1>DataPlay </h1>
+            <h1>DataPlay</h1>
             <img src="logo.webp" alt="DataPlay Logo" class="logo">
-
         </headerTitle>
         <nav>
             <ul>
@@ -34,11 +33,10 @@
         <h3 class="as-seen-on">As Seen On</h3>
         <div class="banner-container">
             <div class="banner-slide">
-                <img src="images/referenceLogos/hn.webp" alt="Logo 1">
-                <img src="images/referenceLogos/ph.webp" alt="Logo 2">
-                <img src="images/referenceLogos/x.webp" alt="Logo 3">
-                <img src="images/referenceLogos/th.webp" alt="Logo 4">
-                <!-- Repeat logos as needed for continuous scrolling -->
+                <img src="images/referenceLogos/hn.webp" alt="Logo 1" class="reference-logo">
+                <img src="images/referenceLogos/ph.webp" alt="Logo 2" class="reference-logo">
+                <img src="images/referenceLogos/x.webp" alt="Logo 3" class="reference-logo">
+                <img src="images/referenceLogos/th.webp" alt="Logo 4" class="reference-logo">
             </div>
         </div>
 
