--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
         <div class="banner-container">
             <div class="banner-slide">
                 <img src="images/referenceLogos/hn.webp" alt="Logo 1" class="reference-logo">
+                <span class="dot"></span>
                 <img src="images/referenceLogos/ph.webp" alt="Logo 2" class="reference-logo">
+                <span class="dot"></span>
                 <img src="images/referenceLogos/x.webp" alt="Logo 3" class="reference-logo">
+                <span class="dot"></span>
                 <img src="images/referenceLogos/th.webp" alt="Logo 4" class="reference-logo">
             </div>
         </div>
