--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                 <img src="images/referenceLogos/x.webp" alt="Logo 3" class="reference-logo">
                 <span class="dot"></span>
                 <img src="images/referenceLogos/th.webp" alt="Logo 4" class="reference-logo">
+                <span class="dot"></span>
+
             </div>
         </div>
 
