--- a/index.html
+++ b/index.html
@@ -49,6 +49,44 @@
         <section id="services" class="services">
             <!-- Insert your services here with minimalist cards or descriptions -->
         </section>
+
+        <section class="case-studies">
+            <h2>Case Studies</h2>
+            <div class="case-studies-grid">
+                <article class="case-study">
+                    <div class="case-study-image">
+                        <img src="images/case-study-1.webp" alt="Case Study 1">
+                    </div>
+                    <div class="case-study-content">
+                        <h3>Data Automation for Fortune 500</h3>
+                        <p>Automated data collection resulting in 85% time savings</p>
+                        <a href="#" class="read-more">Read More →</a>
+                    </div>
+                </article>
+
+                <article class="case-study">
+                    <div class="case-study-image">
+                        <img src="images/case-study-2.webp" alt="Case Study 2">
+                    </div>
+                    <div class="case-study-content">
+                        <h3>E-commerce Data Integration</h3>
+                        <p>Unified data from 12 platforms into single dashboard</p>
+                        <a href="#" class="read-more">Read More →</a>
+                    </div>
+                </article>
+
+                <article class="case-study">
+                    <div class="case-study-image">
+                        <img src="images/case-study-3.webp" alt="Case Study 3">
+                    </div>
+                    <div class="case-study-content">
+                        <h3>Real-time Market Analysis</h3>
+                        <p>Built scalable system processing 1M+ data points daily</p>
+                        <a href="#" class="read-more">Read More →</a>
+                    </div>
+                </article>
+            </div>
+        </section>
     </main>
 
     <footer>
