banner slide works?

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <h3 class="as-seen-on">As Seen On</h3>
         <div class="banner-container">
             <div class="banner-slide">
+                <!-- First set -->
                 <img src="images/referenceLogos/hn.webp" alt="Logo 1" class="reference-logo">
                 <span class="dot"></span>
                 <img src="images/referenceLogos/ph.webp" alt="Logo 2" class="reference-logo">
@@ -41,8 +42,15 @@
                 <span class="dot"></span>
                 <img src="images/referenceLogos/th.webp" alt="Logo 4" class="reference-logo">
                 <span class="dot"></span>
-
-
+                <!-- Duplicate set for seamless loop -->
+                <img src="images/referenceLogos/hn.webp" alt="Logo 1" class="reference-logo">
+                <span class="dot"></span>
+                <img src="images/referenceLogos/ph.webp" alt="Logo 2" class="reference-logo">
+                <span class="dot"></span>
+                <img src="images/referenceLogos/x.webp" alt="Logo 3" class="reference-logo">
+                <span class="dot"></span>
+                <img src="images/referenceLogos/th.webp" alt="Logo 4" class="reference-logo">
+                <span class="dot"></span>
             </div>
         </div>
 
