--- a/index.html
+++ b/index.html
@@ -59,15 +59,15 @@
         </section>
 
         <section class="case-studies">
-            <h2>Case Studies</h2>
+            <h2>Services</h2>
             <div class="case-studies-grid">
                 <article class="case-study">
                     <div class="case-study-image">
                         <img src="images/case-study-1.webp" alt="Case Study 1">
                     </div>
                     <div class="case-study-content">
-                        <h3>Data Automation for Fortune 500</h3>
-                        <p>Automated data collection resulting in 85% time savings</p>
+                        <h3>Daily email with LinkedIn posts of your portfolio companies or (competitors &#128521)</h3>
+                        <p>Or get notified straight away by email or push notification</p>
                         <a href="#" class="read-more">Read More →</a>
                     </div>
                 </article>
