--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                         <img src="images/case-study-1.webp" alt="Case Study 1">
                     </div>
                     <div class="case-study-content">
-                        <h3>Daily email with LinkedIn posts of your portfolio companies or (competitors &#128521)</h3>
-                        <p>Or get notified straight away by email or push notification</p>
+                        <h3>News on Portfolio Companies</h3>
+                        <p>The latest LinkedIn posts at your fingertips</p>
                         <a href="#" class="read-more">Read More →</a>
                     </div>
                 </article>
