--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>
                     <div class="case-study-content">
                         <h3>News on Portfolio Companies</h3>
-                        <p>The latest LinkedIn posts at your fingertips</p>
+                        <p>Their latest LinkedIn posts at your fingertips (or your competitors'...</p>
                         <a href="#" class="read-more">Read More →</a>
                     </div>
                 </article>
