--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
             <img src="logo.webp" alt="DataPlay Logo" class="logo">
         </headerTitle>
         <nav>
+            <a href="#" class="nav-logo">
+                <img src="logo.webp" alt="DataPlay Logo" class="nav-logo-img">
+            </a>
             <ul>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#about">About</a></li>
