--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body id="top">
     <header>
         <headerTitle>
             <h1>DataPlay</h1>
             <img src="logo.webp" alt="DataPlay Logo" class="logo">
         </headerTitle>
         <nav>
-            <a href="#" class="nav-logo">
+            <a href="#top" class="nav-logo">
                 <img src="logo.webp" alt="DataPlay Logo" class="nav-logo-img">
             </a>
             <ul>
