navbar styling yellow

--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
             </div>
         </div>
 
-        <section id="services" class="services">
-            <!-- Insert your services here with minimalist cards or descriptions -->
-        </section>
-
-        <section class="case-studies">
+        <section id="services" class="case-studies">
             <h2>Services</h2>
             <div class="case-studies-grid">
                 <article class="case-study">
