--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <img src="images/case-study-1.webp" alt="Case Study 1">
                     </div>
                     <div class="case-study-content">
-                        <h3>News on Portfolio Companies</h3>
+                        <h3>Latest updates from Portfolio Companies</h3>
                         <p>Their latest LinkedIn posts at your fingertips (or your competitors'...</p>
                         <a href="#" class="read-more">Read More →</a>
                     </div>
