--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <header>
         <headerTitle>
             <h1>DataPlay</h1>
-            <img src="logo.webp" alt="DataPlay Logo" class="logo">
+            <img src="images/brand/logo.webp" alt="DataPlay Logo" class="logo">
         </headerTitle>
         <nav>
             <a href="#top" class="nav-logo">
-                <img src="logo.webp" alt="DataPlay Logo" class="nav-logo-img">
+                <img src="images/brand/logo.webp" alt="DataPlay Logo" class="nav-logo-img">
             </a>
             <ul>
                 <li><a href="#services">Services</a></li>
@@ -62,11 +62,11 @@
             <div class="case-studies-grid">
                 <article class="case-study">
                     <div class="case-study-image">
-                        <img src="images/case-study-1.webp" alt="Case Study 1">
+                        <img src="images/services/service-1.webp" alt="Service 1">
                     </div>
                     <div class="case-study-content">
                         <h3>Latest updates from Portfolio Companies</h3>
-                        <p>Their latest LinkedIn posts at your fingertips (or your competitors'...</p>
+                        <p>Their latest LinkedIn posts at your fingertips (or your competitors'...)</p>
                         <a href="#" class="read-more">Read More →</a>
                     </div>
                 </article>
