--- a/index.html
+++ b/index.html
@@ -65,30 +65,30 @@
                         <img src="images/services/service-1.webp" alt="Service 1">
                     </div>
                     <div class="case-study-content">
-                        <h3>Latest updates from Portfolio Companies</h3>
-                        <p>Their latest LinkedIn posts at your fingertips (or your competitors'...)</p>
+                        <h3>Latest Updates from Portfolio Companies</h3>
+                        <p>Latest LinkedIn updates in your inbox or pushed to your phone</p>
                         <a href="#" class="read-more">Read More →</a>
                     </div>
                 </article>
 
                 <article class="case-study">
                     <div class="case-study-image">
-                        <img src="images/case-study-2.webp" alt="Case Study 2">
+                        <img src="images/services/service-2.webp" alt="Case Study 2">
                     </div>
                     <div class="case-study-content">
-                        <h3>E-commerce Data Integration</h3>
-                        <p>Unified data from 12 platforms into single dashboard</p>
+                        <h3>Social Groups Summaries and Trends</h3>
+                        <p>Summaries of your favorite Facebook, Reddit, LinkedIn or X groups</p>
                         <a href="#" class="read-more">Read More →</a>
                     </div>
                 </article>
 
                 <article class="case-study">
                     <div class="case-study-image">
-                        <img src="images/case-study-3.webp" alt="Case Study 3">
+                        <img src="images/services/service-3.webp" alt="Case Study 3">
                     </div>
                     <div class="case-study-content">
-                        <h3>Real-time Market Analysis</h3>
-                        <p>Built scalable system processing 1M+ data points daily</p>
+                        <h3>Automated Client Onboarding In Notion</h3>
+                        <p>Automatic emails, status updates and progress tracking</p>
                         <a href="#" class="read-more">Read More →</a>
                     </div>
                 </article>
