--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <section id="services" class="case-studies">
-            <h2>Services</h2>
+            <h2>Social Media trackers, <br>Automated Processes & More</h2>
             <div class="case-studies-grid">
                 <article class="case-study">
                     <div class="case-study-image">
