--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
         </div>
 
         <section id="services" class="case-studies">
-            <h2>Social Media trackers, <br>Automated Processes & More</h2>
+            <!-- <h2>Twitter, Reddit, Facebook Scraping, <br>Push Notifications & Emails, & Notion & Google Drive</h2> -->
+            <h2>Scraping, Alerts, Automations,<br> & Visualisations</h2>
+            <h3>Driven By AI, Obviously</h3>
             <div class="case-studies-grid">
                 <article class="case-study">
                     <div class="case-study-image">
                         <img src="images/services/service-1.webp" alt="Service 1">
                     </div>
                     <div class="case-study-content">
-                        <h3>Latest Updates from Portfolio Companies</h3>
-                        <p>Latest LinkedIn updates in your inbox or pushed to your phone</p>
-                        <a href="#" class="read-more">Read More →</a>
+                        <h3>Latest from Portfolio Companies</h3>
+                        <p>Latest LinkedIn Updates in your Inbox or Pushed to your phone</p>
+                        <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
 
@@ -76,9 +78,9 @@
                         <img src="images/services/service-2.webp" alt="Case Study 2">
                     </div>
                     <div class="case-study-content">
-                        <h3>Social Groups Summaries and Trends</h3>
-                        <p>Summaries of your favorite Facebook, Reddit, LinkedIn or X groups</p>
-                        <a href="#" class="read-more">Read More →</a>
+                        <h3>Social Groups' Summaries and Trends</h3>
+                        <p>Summaries of your Favorite Facebook, Reddit, LinkedIn or X-Twitter Groups</p>
+                        <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
 
@@ -87,14 +89,51 @@
                         <img src="images/services/service-3.webp" alt="Case Study 3">
                     </div>
                     <div class="case-study-content">
-                        <h3>Automated Client Onboarding In Notion</h3>
-                        <p>Automatic emails, status updates and progress tracking</p>
-                        <a href="#" class="read-more">Read More →</a>
+                        <h3>Client Onboarding In Notion</h3>
+                        <p>Automatic Emails, Status Updates and Progress Tracking</p>
+                        <!-- <a href="#" class="read-more">Read More →</a> -->
+                    </div>
+                </article>
+
+                <article class="case-study">
+                    <div class="case-study-image">
+                        <img src="images/services/service-4.webp" alt="Case Study 4">
+                    </div>
+                    <div class="case-study-content">
+                        <h3>Push Notifications & Emails on Cue</h3>
+                        <p>Ticketing Systems, Houses For Sale, New Vacancies uploaded</p>
+                        <!-- <a href="#" class="read-more">Read More →</a> -->
+                    </div>
+                </article>
+
+                <article class="case-study">
+                    <div class="case-study-image">
+                        <img src="images/services/service-5.webp" alt="Case Study 5">
+                    </div>
+                    <div class="case-study-content">
+                        <h3>Automated Google Calendar</h3>
+                        <p>Daily Summaries, Automated Rejections, Automated Time Blocks</p>
+                        <!-- <a href="#" class="read-more">Read More →</a> -->
+                    </div>
+                </article>
+
+                <article class="case-study">
+                    <div class="case-study-image">
+                        <img src="images/services/service-6.webp" alt="Case Study 6">
+                    </div>
+                    <div class="case-study-content">
+                        <h3>Viral Competitor Content</h3>
+                        <p>Top Posts from Your Competitors in your Inbox Every Morning</p>
+                        <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
             </div>
         </section>
     </main>
+    <!-- 
+    The tech is easy, everyone can do that now
+    we focus on creating better solutions and solving better problems -->
+
 
     <footer>
         <p>&copy; 2024 DataPlay</p>
