--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <img src="images/services/service-1.webp" alt="Service 1">
                     </div>
                     <div class="case-study-content">
-                        <h3>Latest from Portfolio Companies</h3>
+                        <h3 class="case-study-title">Latest from Portfolio Companies</h3>
                         <p>Latest LinkedIn Updates in your Inbox or Pushed to your phone</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
@@ -78,7 +78,7 @@
                         <img src="images/services/service-2.webp" alt="Case Study 2">
                     </div>
                     <div class="case-study-content">
-                        <h3>Social Groups' Summaries and Trends</h3>
+                        <h3 class="case-study-title">Social Groups' Summaries & Trends</h3>
                         <p>Summaries of your Favorite Facebook, Reddit, LinkedIn or X-Twitter Groups</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
@@ -89,8 +89,8 @@
                         <img src="images/services/service-3.webp" alt="Case Study 3">
                     </div>
                     <div class="case-study-content">
-                        <h3>Client Onboarding In Notion</h3>
-                        <p>Automatic Emails, Status Updates and Progress Tracking</p>
+                        <h3 class="case-study-title">Client Onboarding In Notion</h3>
+                        <p>Automatic Emails, Status Updates & Progress Tracking</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
@@ -100,7 +100,7 @@
                         <img src="images/services/service-4.webp" alt="Case Study 4">
                     </div>
                     <div class="case-study-content">
-                        <h3>Push Notifications & Emails on Cue</h3>
+                        <h3 class="case-study-title">Push Notifications & Emails on Cue</h3>
                         <p>Ticketing Systems, Houses For Sale, New Vacancies uploaded</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
@@ -111,7 +111,7 @@
                         <img src="images/services/service-5.webp" alt="Case Study 5">
                     </div>
                     <div class="case-study-content">
-                        <h3>Automated Google Calendar</h3>
+                        <h3 class="case-study-title">Automated Google Calendar</h3>
                         <p>Daily Summaries, Automated Rejections, Automated Time Blocks</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
@@ -122,7 +122,7 @@
                         <img src="images/services/service-6.webp" alt="Case Study 6">
                     </div>
                     <div class="case-study-content">
-                        <h3>Viral Competitor Content</h3>
+                        <h3 class="case-study-title">Viral Competitor Content</h3>
                         <p>Top Posts from Your Competitors in your Inbox Every Morning</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
@@ -136,7 +136,7 @@
 
 
     <footer>
-        <p>&copy; 2024 DataPlay</p>
+        <p>&copy; 2025 DataPlay</p>
     </footer>
 </body>
 <script src="script.js"></script>
