added how it works section

--- a/index.html
+++ b/index.html
@@ -129,6 +129,34 @@
                 </article>
             </div>
         </section>
+
+        <section class="how-it-works">
+            <h2>We didn't reinvent the wheel. Just design.</h2>
+            <p class="subtitle">Design as you know it is out the door.<br>Design as you want it just arrived.</p>
+
+            <div class="steps-container">
+                <div class="step">
+                    <div class="step-icon">
+                        <img src="images/icons/subscribe.svg" alt="Subscribe icon">
+                    </div>
+                    <h3>Subscribe to a plan & request as many designs as you'd like.</h3>
+                </div>
+
+                <div class="step">
+                    <div class="step-icon">
+                        <img src="images/icons/delivery.svg" alt="Delivery icon">
+                    </div>
+                    <h3>Receive your design within two business days on average.</h3>
+                </div>
+
+                <div class="step">
+                    <div class="step-icon">
+                        <img src="images/icons/revise.svg" alt="Revise icon">
+                    </div>
+                    <h3>We'll revise the designs until you're 100% satisfied.</h3>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- 
     The tech is easy, everyone can do that now
