new tiger images

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
         <section id="services" class="case-studies">
             <!-- <h2>Twitter, Reddit, Facebook Scraping, <br>Push Notifications & Emails, & Notion & Google Drive</h2> -->
-            <h2>Scraping, Alerts, Automations,<br> & Visualisations</h2>
-            <h3>Driven By AI, Obviously</h3>
+            <h2>Scrape, Alert, Automate,<br> & Visualise</h2>
+            <h3>Driven By AI. Obviously.</h3>
             <div class="case-studies-grid">
                 <article class="case-study">
                     <div class="case-study-image">
@@ -101,7 +101,7 @@
                     </div>
                     <div class="case-study-content">
                         <h3 class="case-study-title">Push Notifications & Emails on Cue</h3>
-                        <p>Ticketing Systems, Houses For Sale, New Vacancies uploaded</p>
+                        <p>Ticketing Systems, Houses For Sale, New Vacancies Uploaded. We Got Them</p>
                         <!-- <a href="#" class="read-more">Read More →</a> -->
                     </div>
                 </article>
@@ -131,29 +131,31 @@
         </section>
 
         <section class="how-it-works">
-            <h2>We didn't reinvent the wheel. Just design.</h2>
-            <p class="subtitle">Design as you know it is out the door.<br>Design as you want it just arrived.</p>
+            <h2>Process Automation At Your <br>Fingertips. Always.</h2>
+            <p class="subtitle">Data as you want it just arrived.
+            </p>
 
             <div class="steps-container">
                 <div class="step">
                     <div class="step-icon">
                         <img src="images/icons/subscribe.svg" alt="Subscribe icon">
                     </div>
-                    <h3>Subscribe to a plan & request as many designs as you'd like.</h3>
+                    <h3>Subscribe & request as many data automations as you'd like.
+                    </h3>
                 </div>
 
                 <div class="step">
                     <div class="step-icon">
                         <img src="images/icons/delivery.svg" alt="Delivery icon">
                     </div>
-                    <h3>Receive your design within two business days on average.</h3>
+                    <h3>Receive your Proof Of Concept within two business days on average.</h3>
                 </div>
 
                 <div class="step">
                     <div class="step-icon">
                         <img src="images/icons/revise.svg" alt="Revise icon">
                     </div>
-                    <h3>We'll revise the designs until you're 100% satisfied.</h3>
+                    <h3>We revise until you're 100% satisfied. Risk-free with money-back guarantee.</h3>
                 </div>
             </div>
         </section>
