--- a/index.html
+++ b/index.html
@@ -132,8 +132,10 @@
 
         <section class="how-it-works">
             <h2>Process Automation At Your <br>Fingertips. Always.</h2>
-            <p class="subtitle">Data as you want it just arrived.
-            </p>
+            <!-- <p class="subtitle">Data as you want it just arrived.
+            </p> -->
+            <h3>Data as you want it just arrived.
+            </h3>
 
             <div class="steps-container">
                 <div class="step">
