--- a/index.html
+++ b/index.html
@@ -161,6 +161,60 @@
                 </div>
             </div>
         </section>
+
+        <section class="stuff-we-know">
+            <h2>Stuff we <span class="emphasized">know</span></h2>
+            <p class="subtitle">We've been here before.</p>
+            <div class="tech-pills">
+                <div class="pill pink">
+                    <img src="images/logos/notion.webp" alt="Notion">
+                    <span>Notion</span>
+                </div>
+                <div class="pill blue">
+                    <img src="images/logos/make.webp" alt="Make.com">
+                    <span>Make.com</span>
+                </div>
+                <div class="pill green">
+                    <img src="images/logos/apify.webp" alt="Apify">
+                    <span>Apify</span>
+                </div>
+                <div class="pill yellow">
+                    <img src="images/logos/n8n.webp" alt="n8n">
+                    <span>n8n</span>
+                </div>
+                <div class="pill orange">
+                    <img src="images/logos/python.webp" alt="Python">
+                    <span>Python</span>
+                </div>
+                <div class="pill purple">
+                    <img src="images/logos/nodejs.webp" alt="Node.js">
+                    <span>Node.js</span>
+                </div>
+                <div class="pill teal">
+                    <img src="images/logos/react.webp" alt="React">
+                    <span>React</span>
+                </div>
+                <div class="pill red">
+                    <img src="images/logos/nextjs.webp" alt="Next.js">
+                    <span>Next.js</span>
+                </div>
+                <div class="pill blue-light">
+                    <img src="images/logos/chatgpt.webp" alt="ChatGPT">
+                    <span>ChatGPT</span>
+                </div>
+                <div class="pill green-light">
+                    <img src="images/logos/claude.webp" alt="Claude">
+                    <span>Claude</span>
+                </div>
+                <div class="pill purple-light">
+                    <img src="images/logos/llama.webp" alt="Llama">
+                    <span>Llama</span>
+                </div>
+                <div class="pill black">
+                    <span>+ more</span>
+                </div>
+            </div>
+        </section>
     </main>
     <!-- 
     The tech is easy, everyone can do that now
