--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
         <section class="stuff-we-know">
             <h2>Stuff we <span class="emphasized">know</span></h2>
-            <p class="subtitle">We've been here before.</p>
+            <h3>We've been here before.</h3>
             <div class="tech-pills">
                 <div class="pill pink">
                     <img src="images/logos/notion.webp" alt="Notion">
@@ -210,8 +210,62 @@
                     <img src="images/logos/llama.webp" alt="Llama">
                     <span>Llama</span>
                 </div>
+                <div class="pill orange">
+                    <img src="images/logos/hubspot.webp" alt="HubSpot">
+                    <span>HubSpot</span>
+                </div>
+                <div class="pill blue">
+                    <img src="images/logos/zapier.webp" alt="Zapier">
+                    <span>Zapier</span>
+                </div>
+                <div class="pill pink">
+                    <img src="images/logos/clickup.webp" alt="ClickUp">
+                    <span>ClickUp</span>
+                </div>
+                <div class="pill purple">
+                    <img src="images/logos/elevenlabs.webp" alt="ElevenLabs">
+                    <span>ElevenLabs</span>
+                </div>
+                <div class="pill green">
+                    <img src="images/logos/tally.webp" alt="Tally">
+                    <span>Tally</span>
+                </div>
+                <div class="pill teal">
+                    <img src="images/logos/slack.webp" alt="Slack">
+                    <span>Slack</span>
+                </div>
+                <div class="pill green-light">
+                    <img src="images/logos/shopify.webp" alt="Shopify">
+                    <span>Shopify</span>
+                </div>
+                <div class="pill blue-light">
+                    <img src="images/logos/google-workspace.webp" alt="Google Workspace">
+                    <span>Google Workspace</span>
+                </div>
                 <div class="pill black">
                     <span>+ more</span>
+                </div>
+            </div>
+
+            <div class="reviews-container">
+                <div class="review">
+                    <div class="review-content">
+                        <p class="review-text">"[ProductHunt review content to be added]"</p>
+                        <div class="review-source">
+                            <img src="images/logos/producthunt.webp" alt="ProductHunt" class="review-logo">
+                            <span class="review-platform">ProductHunt</span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="review">
+                    <div class="review-content">
+                        <p class="review-text">"[HackerNews review content to be added]"</p>
+                        <div class="review-source">
+                            <img src="images/logos/hackernews.webp" alt="HackerNews" class="review-logo">
+                            <span class="review-platform">HackerNews</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
