--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     <div class="step-icon">
                         <img src="images/icons/subscribe.svg" alt="Subscribe icon">
                     </div>
-                    <h3>Subscribe & request as many data automations as you'd like.
+                    <h3>Subscribe & request as many automations as you'd like.
                     </h3>
                 </div>
 
