--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         </section>
 
         <section class="examples">
-            <h2>Our solutions in action</h2>
+            <h2>Our Solutions In Action</h2>
             <div class="examples-grid">
                 <div class="example-hero">
                     <img src="images/examples/example-1.webp" alt="Example 1 - Main showcase">
