--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
         <section id="services" class="case-studies">
             <!-- <h2>Twitter, Reddit, Facebook Scraping, <br>Push Notifications & Emails, & Notion & Google Drive</h2> -->
-            <h2>Scrape, Automate, Alert<br> & Visualise</h2>
+            <h2>Collect, Automate, Alert<br> & Visualise</h2>
             <h3>Driven By AI. Obviously.</h3>
             <div class="case-studies-grid">
                 <article class="case-study">
