--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 
         <section id="pricing" class="pricing">
             <div class="pricing-header">
-                <h2>One subscription, endless possibilities</h2>
+                <h2>Fixed Prices, No Surprises</h2>
                 <p class="subtitle">Pause or cancel anytime</p>
             </div>
 
@@ -318,7 +318,7 @@
                         <span class="badge">Pause or cancel anytime</span>
                     </div>
                     <div class="price-row">
-                        <span class="price">$19,967</span>
+                        <span class="price">$1,967</span>
                         <span class="per">/month</span>
                     </div>
                     <div class="includes">
