--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section class="hero">
             <h2>Data is today's <br><span class="gold">Gold</span></h2>
             <p>Data Collection. Data Automation. <br>Data Useful-ication.</p>
-            <button class="cta-button">See Our Work</button>
+            <a href="#whatWeDo" class="cta-button">See Our Work</a>
         </section>
 
         <h3 class="as-seen-on">As Seen On</h3>
